General fixes for Unix system